--- a/IronBloom/src/app/recipe-library/recipe-library.css
+++ b/IronBloom/src/app/recipe-library/recipe-library.css
@@ -3,6 +3,8 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
   margin-top: 1rem;
+  justify-content: center;
+  
 }
 
 .recipe-card {
@@ -11,9 +13,10 @@
   padding: 1rem;
   text-decoration: none;
   color: inherit;
-  background-color: rgba(250, 128, 114, 0.5);
+  background-color: rgba(250, 128, 114, 0.8);
   backdrop-filter: blur(8px);
   transition: box-shadow 0.3s;
+
 }
 
 .recipe-card:hover {
@@ -27,4 +30,13 @@
 .recipe-card-content p {
   margin: 0.25rem 0;
   font-size: 0.9rem;
+}
+
+.search-input{
+    width: 90%;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 12px;
+    background-color:#f5ece6;
+    
 }
