--- a/IronBloom/src/app/recipe-details/recipe-details.html
+++ b/IronBloom/src/app/recipe-details/recipe-details.html
@@ -45,6 +45,14 @@
         </li>
       </ul>
     </section>
+
+    <section class="instructions-section">
+      <h4>Instructions</h4>
+      <p>
+          {{ recipe.instructions | titlecase }}
+      </p> 
+    </section>
+
   </ng-container>
 </section>
 
