--- a/IronBloom/src/app/home/home.html
+++ b/IronBloom/src/app/home/home.html
@@ -13,7 +13,7 @@
 
     <nav class="nav">
       <button class="nav-link" routerLink="/recipes">Recipe Library</button>
-      <button class="nav-link">Daily Tracker</button>
+      <button class="nav-link" routerLink="/tracker">Daily Tracker</button>
       <button class="nav-link" routerLink="/coach">Iron Coach</button>
       <button class="nav-cta">Try the demo</button>
     </nav>
